
- Renamed BlackScholedProcess to GeneralizedBlackScholedProcess;
  specialized classes added for Black-Scholes, Merton, Black and
  Garman-Kohlhagen processes.

- Added NERC calendar (thanks to Joe Byers.)

- Added continuous fixed and floating lookback options (thanks to
  Warren Chou.)

- Added Hull-White and G2 processes for Monte Carlo simulation
  (thanks to Banca Profilo.)

- Added possibility to skip directly to the n-th item in a Sobol
  sequence (thanks to Richard Gould.)

- Added FRA and forward fixed-coupon bonds; examples provided (thanks
  to Allen Kuo)

- Added composite instrument; example provided.
